--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,27 +41,27 @@ services:
       retries: 5
 
   # RAG Application (optional - can run locally)
-  # app:
-  #   build: .
-  #   container_name: enterprise-rag-app
-  #   ports:
-  #     - "8000:8000"
-  #   environment:
-  #     - OPENAI_API_KEY=${OPENAI_API_KEY}
-  #     - NEO4J_URI=bolt://neo4j:7687
-  #     - NEO4J_USER=neo4j
-  #     - NEO4J_PASSWORD=password
-  #     - QDRANT_HOST=qdrant
-  #     - QDRANT_PORT=6333
-  #   depends_on:
-  #     neo4j:
-  #       condition: service_healthy
-  #     qdrant:
-  #       condition: service_healthy
-  #   volumes:
-  #     - ./data:/app/data
-  #   networks:
-  #     - rag-network
+  app:
+    build: .
+    container_name: enterprise-rag-app
+    ports:
+      - "8000:8000"
+    environment:
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - NEO4J_URI=bolt://neo4j:7687
+      - NEO4J_USER=neo4j
+      - NEO4J_PASSWORD=password
+      - QDRANT_HOST=qdrant
+      - QDRANT_PORT=6333
+    depends_on:
+      neo4j:
+        condition: service_healthy
+      qdrant:
+        condition: service_healthy
+    volumes:
+      - ./data:/app/data
+    networks:
+      - rag-network
 
 volumes:
   neo4j_data:
