Add processed_dir configuration for upload workflow
- Add processed_dir setting to Settings (configurable via PROCESSED_DIR env var)
- Refactor path validator to handle both upload_dir and processed_dir
- Use settings.processed_dir for directory creation instead of hardcoded path

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ QDRANT_COLLECTION=enterprise_rag
 
 # Application Configuration
 UPLOAD_DIR=./data/uploads
+PROCESSED_DIR=./data/processed
 CHUNK_SIZE=512
 CHUNK_OVERLAP=50
 EMBEDDING_MODEL=text-embedding-3-small
